# CodeBrachio

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  app.py  configs.py  pyproject.toml  ruff.toml
.github/workflows/: codeql.yml  pre-commit.yml
apps/codebrachio/: auth.py  code_review.py  controllers.py  prompts.py  states.py  utils.py
